2008-03-02  Inge Wallin  <inge@lysator.liu.se>

	Cleaning
	* src/lib/MeasureTool.{h,cpp}: cleaning

	Prepare the Measuretool for use of the Projection classes.
	* src/lib/MeasureTool.{h,cpp}: Take ViewportParams everywhere
	instead of ViewParams.
	* src/lib/MarbleMap.cpp (doPaint): Send ViewportParams parameter.

2008-03-01  Inge Wallin  <inge@lysator.liu.se>

	Place placemarks using the new projection classes
	* src/lib/AbstractProjection.{h,cpp} (screenCoordinates),
	* src/lib/SphericalProjection.{h,cpp} (screenCoordinates),
	* src/lib/EquirectProjection.{h,cpp} (screenCoordinates),
	* src/lib/MercatorProjection.{h,cpp} (screenCoordinates): 
	New overloaded function
	* src/lib/PlaceMarkLayout.cpp (locatedOnScreen): Use
	currentProjection->screenCoordinates instead of own code.

2008-02-28  Torsten Rahn  <rahn@kde.org>

    * LICENSE.txt:
    * ChangeLog:

    - License Change: LGPL2 -> LGPL2+ 
      as communicated with all other developers.

2008-02-26  Torsten Rahn  <rahn@kde.org>

    * docs/paintingmaps.txt:
    * src/lib/GeoPainter.h:
    - Initial "draft" for GeoPainter.
      TODO: Implement the case for isGeoProjected = false 
      first and ignore the case true until the LMC is in 
      place. 
      See docs/paintingmaps.txt for details. 

2008-02-26  Torsten Rahn  <rahn@kde.org>

    * src/lib/geoscene/GeoSceneTest.cpp:
    * src/lib/geoscene/parser/GeoSceneTagHandler.cpp:
    * src/lib/MarblePlacemarkModel.cpp:
    * src/lib/geodata/GeoDataTest.cpp:
    * docs/dgml2.txt:

    - Minor fixes and typos

    * src/lib/geodata/parser/GeoDataParser.cpp:
    * src/lib/geodata/parser/GeoDataParser.h:

    - Fixes by Nikolas Zimmermann after I had 
      pointed out some issues with the previous API.

2008-02-25  Inge Wallin  <inge@lysator.liu.se>

	Krazy fixes:
	* src/lib/TileLoader.h,
	* src/lib/MarbleModel.cpp,
	* src/lib/geodata/handlers/kml/KMLElementDictionary.cpp,
	* src/lib/geodata/handlers/gpx/GPXElementDictionary.cpp,